Added court of law.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 </ul>
 <h2>Security of Your Personal Data</h2>
 <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
+<h2>Governing Law</h2>
+<p>This Privacy Policy shall be governed and construed in accordance with the laws of the State of California, without regard to its conflict of law provisions. Any legal action or proceeding related to this Privacy Policy shall be brought exclusively in the state or federal courts located in the State of California.</p>
 <h1>Children's Privacy</h1>
 <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13. If You are a parent or guardian and You are aware that Your child has provided Us with Personal Data, please contact Us. If We become aware that We have collected Personal Data from anyone under the age of 13 without verification of parental consent, We take steps to remove that information from Our servers.</p>
 <p>If We need to rely on consent as a legal basis for processing Your information and Your country requires consent from a parent, We may require Your parent's consent before We collect and use that information.</p>
@@ -159,7 +161,7 @@
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
 <li>
-<p>By email: privacy@mogoesports.com</p>
+<p>By email: legal@mogosports.com</p>
 </li>
 <li>
 <p>By mail: 3929 ESPLANADE, MARINA DEL REY, CA, 90292</p>
