Artemis avenue llc changed from Evemeta llc

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p><strong>Application</strong> refers to Happy Glass, the software program provided by the Company.</p>
 </li>
 <li>
-<p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to EVEMETA LLC, 3929 ESPLANADE MARINA DEL REY 90292.</p>
+<p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Artemis Ave LLC.</p>
 </li>
 <li>
 <p><strong>Country</strong> refers to: California, United States</p>
